# OpaaxEngine

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompileShaders.bat  EditorFolderColors.json  GenerateProj.bat  LICENSE  MakeOpaax.bat  README.md  SFMLEngine.sln  build.bat  build_debug.bat  engine.config.json  imgui.ini  premake5.lua
Engine/: CMakeLists.txt
Engine/Assets/: AssetManifest.json
Engine/Assets/Shaders/: Sprite.glsl
Engine/Source/Assets/: AssetHandle.hpp  AssetIdResolve.h  AssetManifest.cpp  AssetManifest.h  AssetRefBlock.cpp  AssetRefBlock.hpp  AssetRegistry.cpp  AssetRegistry.h  AssetScanner.cpp  AssetScanner.h  AssetTypeList.h  IAsset.hpp
Engine/Source/Assets/Loader/: AssetLoaderRegistry.cpp  AssetLoaderRegistry.h  CollisionProfileLoader.cpp  CollisionProfileLoader.h  FontLoader.cpp  FontLoader.h  IAssetLoader.hpp  SceneLoader.cpp  SceneLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
Engine/Source/Core/: ApplicationEvents.hpp  CoreEngineApp.cpp  CoreEngineApp.h  EngineAPI.h  OpaaxEntryPoint.h  OpaaxForward.cpp  OpaaxForward.h  OpaaxGlobal.cpp  OpaaxGlobal.h  OpaaxHash.cpp  OpaaxHash.h  OpaaxMacro.hpp  OpaaxMathTypes.h  OpaaxPath.cpp  OpaaxPath.h  OpaaxString.hpp  OpaaxStringID.hpp  OpaaxTypes.h  Window.cpp  Window.h
Engine/Source/Core/Application/: OpaaxApplication.cpp  OpaaxApplication.h
Engine/Source/Core/Component/: OpaaxComponent.cpp  OpaaxComponent.h
Engine/Source/Core/Config/: ConfigIO.cpp  ConfigIO.h  ConfigTest.cpp  ConfigTest.h  Config_Engine.cpp  Config_Engine.h  EngineConfig.cpp  EngineConfig.h  EngineConfigData.cpp  EngineConfigData.h  IConfig.cpp  IConfig.h  ProjectConfig.cpp  ProjectConfig.h  TConfig.hpp
Engine/Source/Core/Container/: TPolymorphicList.hpp
Engine/Source/Core/Event/: OpaaxEvent.hpp  OpaaxEventDispatcher.hpp  (+1 more)
Engine/Source/ECS/: BaseComponents.hpp  ComponentRegistry.cpp  ComponentRegistry.h  ComponentStorage.hpp  ComponentTypeID.cpp  ComponentTypeID.h  Hierarchy.cpp  Hierarchy.h  OpaaxEntity.hpp
Engine/Source/Editor/: EditorEventBus.cpp  EditorEventBus.h  EditorState.h  EditorSubsystem.cpp  EditorSubsystem.h  IEditorPanel.h
Engine/Source/Physics/: IPhysicsWorld.h  PhysicsAPI.h  PhysicsBackendFactory.cpp  PhysicsTypes.h
Engine/Source/Platform/: WindowsWindow.cpp  WindowsWindow.h
Engine/Source/RHI/: BackendFactory.cpp  BindGroup.h  Buffer.cpp  Buffer.h  Framebuffer.h  ICommandBuffer.h  IGraphicsContext.h  IRenderAPI.h  Pipeline.h  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDataTypes.h  Texture.h  UniformBuffer.h
Engine/Source/Renderer/: Camera2D.cpp  Camera2D.h  FrameBatcher.h  RenderLayer.h  RenderLayerList.h  RenderStats.h  RenderSubsystem.cpp  RenderSubsystem.h  RenderTarget.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2DSortKey.h  ShaderAsset.cpp  ShaderAsset.h  Texture2D.cpp  Texture2D.h
Engine/Source/Scene/: Scene.h  SceneAsset.cpp  SceneAsset.h  SceneFactory.cpp  SceneFactory.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Engine/Source/World/: IOverlayRenderSystem.h  IWorldSystem.h  RenderContext.h  World.cpp  World.h
Engine/Tests/: CMakeLists.txt  Main.cpp  README.md  SmokeTest.cpp
Engine/Tests/Assets/: AssetIdResolveTests.cpp
Engine/Tests/Core/: StringTests.cpp
Engine/Tests/ECS/: ComponentRegistryTests.cpp  HierarchyTests.cpp  MoverComponentTests.cpp
Engine/Tests/Physics/: CollisionProfileTests.cpp
Engine/Tests/Renderer/: FontKerningTests.cpp  FrameBatcherTests.cpp  SortKeyTests.cpp
Engine/Vendors/vk-bootstrap/: OPAAX_VENDORED.txt
Game/: CMakeLists.txt  Game.opaaxproj
Game/Assets/: AssetManifest.json
Game/Assets/Physics/: Pawn.collisionprofile.json  Solid.collisionprofile.json
Game/Assets/Scenes/: GameScene.json  GameScene.scene.json  Kfbuewbfuwea.scene.json  NewScene.scene.json  Test.scene.json  TestSceneGameFolder.scene.json  empty.scene.json  untitled.scene.json  wafwaufhd.scene.json
Game/Source/: MyGame.cpp  MyGame.h  main.cpp
Game/Source/Scene/: GameScene.cpp  GameScene.h
Game/Source/Systems/: PlayerDemoSystem.cpp  PlayerDemoSystem.h
MyProject/: .gitignore  CMakeLists.txt  MyProject.opaaxproj
MyProject/Assets/: AssetManifest.json
MyProject/Source/: MyProject.cpp  MyProject.h  main.cpp
OpaaxCreator/: CMakeLists.txt  OpaaxCreator.cpp
PhysicsDemo/: CMakeLists.txt  PhysicsDemo.opaaxproj
PhysicsDemo/Assets/: AssetManifest.json
PhysicsDemo/Assets/Physics/: DynamicBox.collisionprofile.json  Pickup.collisionprofile.json
PhysicsDemo/Source/: PhysicsDemoApp.cpp  PhysicsDemoApp.h  main.cpp
PhysicsDemo/Source/Scene/: PhysicsSandboxScene.cpp  PhysicsSandboxScene.h
PhysicsDemo/Source/Systems/: PhysicsEventSystem.cpp  PhysicsEventSystem.h  SandboxControlSystem.cpp  SandboxControlSystem.h
RendererStressDemo/: CMakeLists.txt  RendererStressDemo.opaaxproj
RendererStressDemo/Assets/: AssetManifest.json
RendererStressDemo/Source/: RendererStressDemoApp.cpp  RendererStressDemoApp.h  main.cpp
RendererStressDemo/Source/Scene/: StressScene.h
RendererStressDemo/Source/Systems/: BulletStormRenderSystem.cpp  BulletStormRenderSystem.h
Sandbox/: CMakeLists.txt  Sandbox.opaaxproj
Sandbox/Assets/: AssetManifest.json
Sandbox/Source/: Sandbox.cpp  Sandbox.h  main.cpp
Sandbox/Source/Config/: ConfigTest.cpp  ConfigTest.h
SimpleShmup/: CMakeLists.txt  SimpleShmup.opaaxproj
SimpleShmup/Assets/: AssetManifest.json
SimpleShmup/Assets/Scenes/: Test.scene.json  awdawdawdwaf.scene.json  wdadawda.scene.json
SimpleShmup/Source/: SimpleShmupGame.cpp  SimpleShmupGame.h  main.cpp
SimpleShmup/Source/Scene/: MenuScene.cpp  MenuScene.h  ShmupGameScene.cpp  ShmupGameScene.h
SimpleShmup/Source/Systems/: CollisionSystem.cpp  CollisionSystem.h  EnemySpawnSystem.cpp  EnemySpawnSystem.h  LifetimeSystem.cpp  LifetimeSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h  SceneTransitionSystem.cpp  SceneTransitionSystem.h  ShmupGameRulesSystem.cpp  ShmupGameRulesSystem.h
(+453 files in other folders)
